# JoeBot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  bot.py  bot_old.py  compose.yaml  db.py  editgif.py  install_url.py  keys.py  paginatedview.py  pyproject.toml  taskscheduler.py  test.py  youtube.py
cogs/: conversions_cog.py  core.py  game_keys_cog.py  management_cog.py  minecraft_cog.py  security_cog.py  spsp_cog.py  trivia_cog.py  weather_cog.py  youtube_cog.py
utils/: checks.py
